Checkout, Product api update
